@@ -11,8 +11,8 @@
 @@ -1,3 +1,3 @@
 -datadir = @datadir@/tessdata/configs
 +datadir = @datadir@/tesseract-ocr/4/tessdata/configs
- data_DATA = inter makebox box.train unlv ambigs.train lstm.train api_config kannada box.train.stderr quiet logfile digits hocr tsv linebox pdf rebox strokewidth bigram txt
- EXTRA_DIST = inter makebox box.train unlv ambigs.train lstm.train api_config kannada box.train.stderr quiet logfile digits hocr tsv linebox pdf rebox strokewidth bigram txt
+ data_DATA = inter makebox box.train unlv ambigs.train lstm.train lstmdebug api_config kannada box.train.stderr quiet logfile digits hocr tsv linebox pdf rebox strokewidth bigram txt
+ EXTRA_DIST = inter makebox box.train unlv ambigs.train lstm.train lstmdebug api_config kannada box.train.stderr quiet logfile digits hocr tsv linebox pdf rebox strokewidth bigram txt
 --- tesseract-4.00~git2230-59dc3e62.orig/tessdata/tessconfigs/Makefile.am
 +++ tesseract-4.00~git2230-59dc3e62/tessdata/tessconfigs/Makefile.am
 @@ -1,3 +1,3 @@
